experimentData/JavaFuzzer/CFR-detailedExperimentData/errorSamples/decompilationFailures/376/log-1-376.log

Test.java:184: error: case, default, or '}' expected
                        ** case 109:
                        ^
Test.java:184: error: case, default, or '}' expected
                        ** case 109:
                         ^
Test.java:188: error: illegal start of statement
                        case 110: 
                        ^
3 errors

Note: FuzzerUtils.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.

